--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
-        "protonemedia/laravel-xss-protection": "^1.8"
+        "protonemedia/laravel-xss-protection": "^1.8",
+        "spatie/crypto": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
